--- a/message/templates/message/message_list.html
+++ b/message/templates/message/message_list.html
@@ -7,15 +7,13 @@
             <h4 class="my-0 font-weight-normal">{{ object.topic }}</h4>
           </div>
           <div class="card-body">
-              {%  %}
-            <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>10 users included</li>
-              <li>2 GB of storage</li>
-              <li>Email support</li>
-              <li>Help center access</li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+              {% if object.client %}
+                <h3 class="card-title pricing-card-title"> <small class="text-muted">{{ object.client }}</small></h3>
+              {% endif %}
+
+            <a href="{% url 'message:message_view' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">
+                Посмотреть
+            </a>
           </div>
         </div>
     {% endfor %}
