--- a/message/templates/message/message_detail.html
+++ b/message/templates/message/message_detail.html
@@ -4,12 +4,12 @@
     <div class="row">
         <div class="col-6">
             <div class="card">
-                <div class="card-feader">{{ object.topic }}</div>
+                <div class="card-header">{{ object.topic }}</div>
                 <div class="card-body">
                     {{ object.body }}
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-outline-success">Сделать рассылку</a>
+                    <a href="{% url 'mailing:create' object.pk %}" class="btn btn-outline-success">Сделать рассылку</a>
                 </div>
             </div>
         </div>
