--- a/mailing/templates/mailing/mailing_form.html
+++ b/mailing/templates/mailing/mailing_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="card">
-    <div class="card-header">Создание рассылки сообщения {{ topic }}</div>
+    <div class="card-header">Создание рассылки {{ topic }}</div>
     <div class="card-body">
         <form method="post">
             {% csrf_token %}
