--- a/mailing/templates/mailing/mailing_list.html
+++ b/mailing/templates/mailing/mailing_list.html
@@ -1,20 +1,29 @@
 {% extends 'message/base.html' %}
-
 {% block content %}
-    {% for object in object_list %}
-<div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">{{ object.topic }}</h4>
-          </div>
-          <div class="card-body">
-              {% if object.client %}
-                <h3 class="card-title pricing-card-title"> <small class="text-muted">{{ object.client }}</small></h3>
-              {% endif %}
 
-            <a href="{% url 'message:message_view' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">
-                Посмотреть
-            </a>
-          </div>
-        </div>
-    {% endfor %}
+<div class="card">
+    <div class="card-header">Созданные рассылки</div>
+    <div class="card-body">
+        <table class="table table-striped">
+
+            <tr>
+                <th>Тема рассылки</th>
+                <th>Получатели</th>
+                <th>Дата создания</th>
+            </tr>
+            {% for object in object_list %}
+            <tr>
+                <td>{{ object.topic }}</td>
+                <td>
+                    {% for recipient in object.recipients.all %}
+                        {{ recipient.email }}{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </td>
+                <td>{{ object.created_at }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
 {% endblock %}
+
