--- a/message/templates/message/message_list.html
+++ b/message/templates/message/message_list.html
@@ -1,20 +1,37 @@
 {% extends 'message/base.html' %}
 
 {% block content %}
-    {% for object in object_list %}
-<div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">{{ object.topic }}</h4>
-          </div>
-          <div class="card-body">
-              {% if object.client %}
-                <h3 class="card-title pricing-card-title"> <small class="text-muted">{{ object.client }}</small></h3>
-              {% endif %}
+<div class="col-12 mb-5">
 
-            <a href="{% url 'message:message_view' object.pk %}" type="button" class="btn btn-lg btn-block btn-outline-primary">
-                Посмотреть
-            </a>
-          </div>
+    <a class="btn btn-outline-primary" href="{% url 'message:create_message' %}">Создать сообщение</a>
+
+</div>
+{% for object in object_list %}
+<div class="col-6 mb-4">
+    <div class="card mb-6 box-shadow">
+        <div class="card-header bg-primary text-white">
+            <h4 class="my-0 font-weight-normal">{{ object.topic }}</h4>
         </div>
-    {% endfor %}
+        <div class="card-body">
+            {% if object.client %}
+            <h3 class="card-title pricing-card-title"><small class="text-muted">{{ object.client }}</small></h3>
+            {% else %}
+            <h3 class="card-title pricing-card-title"><small class="text-muted">Админ</small></h3>
+            {% endif %}
+            <div class="btn-group" role="group" aria-label="Button group">
+                <a href="{% url 'message:message_view' object.pk %}" class="btn btn-sm btn-primary">
+                    Посмотреть
+                </a>
+                <a href="{% url 'message:update_message' object.pk %}" class="btn btn-sm btn-success">
+                    Обновить
+                </a>
+                <a href="{% url 'message:delete_message' object.pk %}" class="btn btn-sm btn-danger">
+                    Удалить
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endfor %}
 {% endblock %}
