--- a/message/templates/message/message_detail.html
+++ b/message/templates/message/message_detail.html
@@ -1,15 +1,18 @@
+
 {% extends 'message/base.html' %}
 
 {% block content %}
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-6">
-            <div class="card">
-                <div class="card-header">{{ object.topic }}</div>
+            <div class="card mt-5">
+                <div class="card-header bg-primary text-white">
+                    {{ object.topic }}
+                </div>
                 <div class="card-body">
                     {{ object.body }}
                 </div>
                 <div class="card-footer">
-                    <a href="{% url 'mailing:create' object.pk %}" class="btn btn-outline-success">Сделать рассылку</a>
+                    <a href="{% url 'mailing:create' object.pk %}" class="btn btn-success">Сделать рассылку</a>
                 </div>
             </div>
         </div>
