--- a/message/templates/message/message_list.html
+++ b/message/templates/message/message_list.html
@@ -1,11 +1,11 @@
 {% extends 'message/base.html' %}
 
 {% block content %}
+{% if perms.message.add_message %}
 <div class="col-12 mb-5">
-
     <a class="btn btn-outline-primary" href="{% url 'message:create_message' %}">Создать сообщение</a>
-
 </div>
+{% endif %}
 {% for object in object_list %}
 <div class="col-6 mb-4">
     <div class="card mb-6 box-shadow">
@@ -13,21 +13,24 @@
             <h4 class="my-0 font-weight-normal">{{ object.topic }}</h4>
         </div>
         <div class="card-body">
-            {% if object.client %}
-            <h3 class="card-title pricing-card-title"><small class="text-muted">{{ object.client }}</small></h3>
-            {% else %}
-            <h3 class="card-title pricing-card-title"><small class="text-muted">Админ</small></h3>
-            {% endif %}
+            <h6 class="p-2">Добавил {{ object.owner }}</h6>
+            <h6 class="p-2">Добавил {{ object.user|default:"admin" }}</h6>
             <div class="btn-group" role="group" aria-label="Button group">
+                {% if perms.message.view_message %}
                 <a href="{% url 'message:message_view' object.pk %}" class="btn btn-sm btn-primary">
                     Посмотреть
                 </a>
+                {% endif %}
+                {% if perms.message.change_message %}
                 <a href="{% url 'message:update_message' object.pk %}" class="btn btn-sm btn-success">
                     Обновить
                 </a>
+                {% endif %}
+                {% if perms.message.delete_message %}
                 <a href="{% url 'message:delete_message' object.pk %}" class="btn btn-sm btn-danger">
                     Удалить
                 </a>
+                {% endif %}
             </div>
         </div>
     </div>
