--- a/message/templates/message/includes/inc_main_menu.html
+++ b/message/templates/message/includes/inc_main_menu.html
@@ -1,8 +1,8 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Магазин электроники</h5>
+    <h5 class="my-0 mr-md-auto font-weight-normal">Сервис рассылок</h5>
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="{% url 'message:message_list' %}">Сообщения</a>
-
+        <a class="p-2 btn btn-outline-primary" href="{% url 'blog:list' %}">Блог</a>
         {% if user.is_authenticated %}
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a>
